# TSAS_26

./: .gitignore  DEV_NOTES.md  README.html  README.md  pulsar_delay.py  pyproject.toml
csv/: Table1.csv  Table2.csv  hi4pi_profile_B0329p54.csv  hi4pi_profile_B0355p54.csv  hi4pi_profile_B0736m40.csv  hi4pi_profile_B0833m45.csv  hi4pi_profile_B0835m41.csv  hi4pi_profile_B0950p08.csv  hi4pi_profile_B1133p16.csv  hi4pi_profile_B1556m44.csv  hi4pi_profile_B1641m45.csv  hi4pi_profile_B1642m03.csv  hi4pi_profile_B1706m16.csv  hi4pi_profile_B1713m40.csv  hi4pi_profile_B1737m30.csv  hi4pi_profile_B1742m30.csv  hi4pi_profile_B1749m28.csv  hi4pi_profile_B1929p10.csv  hi4pi_profile_B1933p16.csv  hi4pi_profile_B2016p28.csv  hi4pi_profile_B2020p28.csv  hi4pi_profile_B2021p51.csv  hi4pi_profile_index.csv  sample_new_pulsar_ATNF.csv  sample_pulsar.csv  sample_pulsar_ATNF.csv  sample_pulsars.csv
doc/: ATNF.txt  ATNF_COMPARISON.md  DEV_NOTES.md  README.html  README.md  REQUIREMENTS.md
latex/: Table1.tex  Table2.tex  prop1.tex
rundir/: fetch_hi4pi_profiles.sh  plot_hi4pi_profiles.sh  run_atnf_table.sh  run_example.sh  run_old_table.sh
script/: __init__.py  fetch_hi4pi_profiles.py  make_proposal_table.py  plot_hi4pi_profiles.py  pulsar_delay.py  pulsar_delay_atnf_table.py  pulsar_delay_old_table.py
