[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "tsas-pulsar-delay"
version = "0.1.0"
description = "Compute pulsar dispersion delay across a bandwidth from CSV tables."
readme = "doc/README.md"
requires-python = ">=3.9"
authors = [
  { name = "Prasun Dutta" }
]
license = { text = "MIT" }

[project.scripts]
pulsar-delay = "script.pulsar_delay:main"
pulsar-delay-old-table = "script.pulsar_delay_old_table:main"
pulsar-delay-atnf-table = "script.pulsar_delay_atnf_table:main"

[tool.setuptools]
packages = ["script"]
